--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
             <img src="images/me.png" alt="">
         </div>
     </section>
+    <section class="dream_big">
+        <div class="half_width">
+            <img src="images/me2.png" alt="">
+        </div>
+        <div class="half_width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link_button" target="_blank" href="#">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
