--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-    <section class="head_part">
+    <section class="head_part flexible_container">
         <div class="half_width">
             <h1>Welcome To</h1>
-            <h1>Peter Parker World</h1>
+            <h1 class="orange_color">Peter Parker World</h1>
             <h3>Build Climber and Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                 work. That's why I am learning and mastering web development. I will not stop until I become the Web
@@ -30,7 +30,7 @@
             <img src="images/me.png" alt="">
         </div>
     </section>
-    <section class="dream_big">
+    <section class="dream_big flexible_container">
         <div class="half_width">
             <img src="images/me2.png" alt="">
         </div>
@@ -40,6 +40,25 @@
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
                 to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
             <a class="link_button" target="_blank" href="#">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div class="flexible_container">
+            <div class="half_width">
+                <h1>Full Stack Web Developer</h1>
+                <h2 class="orange_color">2021-Present | Pro Level Developer</h2>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="half_width">
+                <h1>Baby Web Developer</h1>
+                <h2 class="orange_color">2020-2021 | Programming Learner</h2>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
         </div>
     </section>
 </body>
