added footer and delete some photos

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="experience">
         <h1>Experiences</h1>
         <div class="flexible_container">
-            <div class="experience_items">
+            <div id="full_stack" class="experience_items">
                 <h2>Full Stack Web Developer</h1>
                     <h3 class="orange_color">2021-Present | Pro Level Developer</h3>
                     <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
@@ -53,7 +53,7 @@
                         called
                         Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="experience_items">
+            <div id="baby_developer" class=" experience_items">
                 <h2>Baby Web Developer</h1>
                     <h3 class="orange_color">2020-2021 | Programming Learner</h3>
                     <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
@@ -63,6 +63,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
